--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "export REACT_APP_TRANSLATE_URL=http://localhost:8080 react-scripts start",
+    "start": "REACT_APP_TRANSLATE_URL=http://localhost:8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
